--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,400&display=swap');
 * {
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     border: 0;
 }
 
 body {
-    background-color: #aebbb6;
     width: 100%;
     min-height: 100vh;
+    background-color: #f1f1f1;
 }
 
 .logo {
@@ -46,51 +48,96 @@ body {
     color: #6b8179;
 }
 
-.divTexto{
-    display: flex;
+.home{
+    width: 100%;
+    min-height: 440px;
+    background: url(../imagens/Banner.png);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    display: grid;
     justify-content: center;
     align-items: center;
+    color:#ffff;
 }
 
-.texto{
-    margin-top: 10vh;
-    background-color: #43534d;
-    color:#ffffff;
+.home-text{
+    text-align: center;
 }
 
-.branco{
-    color:#ffffff;
+.home-title{
+    font-size: 3rem;
 }
 
-.verde {
-    color: 	#a1b8af;
+.home-subtitle{
+    font-size: 1.7rem;
+    font-weight: 400;
 }
 
-.imgPost {
-    border-radius: 5px;
-}
-
-.divLinhVerde {
+.divLinhaCinza {
     width: 100%;
     height: 40px;
 }
 
-.linhaVerde {
+.linhaCinza {
     margin-top: 3vh;
     margin-left: 5vw;
     letter-spacing: 5px;
     font-weight: 600;
     font-size: 2rem;
-    color: rgb(0, 31, 13);
+    color: rgb(58, 58, 58);
     display: flex;
 }
 
 .linha {
     margin-top: 15px;
-    background-color: #43534d;
+    background-color: rgb(100, 100, 100);
     height: 6px;
     width: 100%;
     float: left;
+}
+
+.fundoCard {
+    color: #ffffff;
+    border: none;
+    margin-top: 5vh;
+    width: 100%;
+    height: 100%;
+    background: none;
+}
+
+.fundoCardGrande {
+    color: #000000;
+    border: none;
+    margin-top: 5vh;
+    width: 100%;
+    height: 100%;
+    background: #dbdbdb;
+}
+
+.Card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 3vh;
+    padding-bottom: 5vh;
+    width: 100%;
+    height: 100%;
+    background: none;
+}
+
+.text{
+    color: #000000d8;
+}
+
+.Banner3{
+    width: 100%;
+    height: 100%;
+    background: url(../imagens/Banner.png);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 .cardsMenor {
@@ -99,6 +146,7 @@ body {
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 3vw;
+    margin-top: 3vh;
     width: 100%;
     height: 100%;
 }
@@ -106,55 +154,105 @@ body {
 .imgPostsMenor {
     width: 100%;
     height: 23vh;
-    border-radius: 5px;
 }
 
 .backgroundCardMenor {
-    background-color: #43534d;
-    color: #ffffff;
-    height: 65vh;
+    height: 550px;
     margin-top: 2vh;
     border: none;
-    float: left;
 }
 
-.fundoCard {
-    background-color: #aebbb6;
-    color: #000000;
-    border: none;
-    margin-top: 5vh;
-    float: left;
-    width: 100%;
-    height: 100%;
-}
-
-.ultimoCard {
+.cardsQuadrados {
+    background: url(../imagens/Banner.png);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
-    margin-top: 3vh;
-    background-color: #43534d;
-    padding-bottom: 3.5vh;
+    gap: 3vw;
+    margin-top: 2vh;
     width: 100%;
     height: 100%;
 }
 
-.footer {
+.imagensQuadradas{
+    margin-top: 10vh;
+    width: 300px;
+    height: 300px;
+    align-items: center;
+}
+
+.logoFooter{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 7vh;
-    width: 100%;
-    background-color: #8d9c96;
-    color: rgb(0, 0, 0);
-}
-
-.fundoVerde {
-    background-color: rgb(16, 99, 70);
     color: #000000;
 }
 
+.logoFooter:hover{
+    color: rgb(196, 196, 196);
+}
 
+.follow{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+}
 
+.footer .follow{
+    padding: 1rem 0;
+}
 
+.footer .follow a{
+    height:4rem;
+    line-height:4rem;
+    width:4rem;
+    border-radius: 50%;
+    font-size: 1.5rem;
+    background: #000000;
+    color:#fff;
+    margin:0 .1rem;
+    text-align: center;
+}
+
+.footer .follow a:hover{
+    background-color: #f1f1f1;
+    color: #000000;
+}
+
+.footer{
+    background-color: #747477;
+    height: 100%;
+    width: 100%;
+}
+
+@media (max-width: 768px){
+    .home-title{
+        font-size: 2.5rem;
+    }
+    .home-subtitle{
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 425px){
+    .home-title{
+        font-size: 2rem;
+    }
+    .home-subtitle{
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 375px){
+    .home-title{
+        font-size: 1.5rem;
+    }
+    .home-subtitle{
+        font-size: 1rem;
+    }
+}
