--- a/css/style.css
+++ b/css/style.css
@@ -178,11 +178,16 @@ body {
     height: 100%;
 }
 
-.imagensQuadradas{
+.div-imagensQuadradas{
     margin-top: 10vh;
-    width: 300px;
-    height: 300px;
+    width: 290px;
+    height: 270px;
     align-items: center;
+}
+
+.imagensQuadradas{
+    width: 280px;
+    height: 200px;
 }
 
 .logoFooter{
