--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ body {
 .button-28 {
     text-align: center;
     appearance: none;
-    background-color: transparent;
+    background-color: #fff;
     border: 2px solid #1A1A1A;
     border-radius: 15px;
     box-sizing: border-box;
@@ -147,12 +147,6 @@ body {
 .button-28:active {
     box-shadow: none;
     transform: translateY(0);
-}
-
-.container-mais{
-    background-color: #000000;
-    width:100%;
-    height: 70vh;
 }
 
 .fundoCard {
@@ -247,6 +241,11 @@ body {
     align-items: center;
 }
 
+.div-imagensQuadradas:hover {
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+
 .imagensQuadradas {
     width: 280px;
     height: 200px;
@@ -298,6 +297,41 @@ body {
     width: 100%;
 }
 
+/* Ver Mais */
+
+.container-verMais{
+    display: none;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    background: none;
+}
+
+.Card-verMais {
+    margin-top: 7rem;
+    margin-bottom: 2.6rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background: none;
+}
+
+.fundoCardGrande-verMais {
+    color: #000000;
+    border: none;
+    width: 60rem;
+    background: #dbdbdb;
+}
+
+.container-btnVoltar{
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media (max-width: 1500px) {
     .fundoCardGrande {
         height: 70vh;
@@ -308,6 +342,14 @@ body {
     }
 
     .descricao-post1 {
+        font-size: 1.2rem;
+    }
+
+    .titulo-post-verMais {
+        font-size: 1.5rem;
+    }
+
+    .descricao-post-verMais {
         font-size: 1.2rem;
     }
 }
@@ -324,6 +366,7 @@ body {
     .fundoCardGrande {
         height: 80vh;
     }
+
 }
 
 @media (max-width: 425px) {
@@ -347,9 +390,5 @@ body {
 
     .home-subtitle {
         font-size: 1rem;
-    }
-
-    .fundoCardGrande {
-        height: 95vh;
     }
 }
